--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@stripe/react-stripe-js": "^3.3.0",
-    "@stripe/stripe-js": "^5.8.0",
+    "@stripe/react-stripe-js": "^3.4.0",
+    "@stripe/stripe-js": "^5.10.0",
     "autoprefixer": "^10.4.20",
+    "dotenv": "^16.4.7",
+    "mongodb": "^6.14.2",
+    "mongoose": "^8.12.1",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
